--- a/New.html
+++ b/New.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 
 <body>
     <div class="card">
-        <div class="title">Bundle & Save</div>
+        <div class="title"><br>Bundle & Save<br></div>
         <div class="content">
             <label for="first" class="box first">
                 <div class="course">
@@ -32,7 +34,7 @@
             
                 <label for="second" class="box1 second">
                     <div class="course1">
-                        <input type="radio" name="box" id="two">
+                        <input  type="radio" name="box" id="two">
                         <span class="pair1">2 Pair</span>
 
                         <div>
