--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                        </span>
                         <span class="pair1">2 Pair</span>
-
+                       <span class="popular">Most Popular</span>
                         <div>
                             <span class="ddk1">DDK 345.00</span>
                         </div>
@@ -98,6 +98,7 @@
 
                     <span class="ddk">DDK 528.00.00</span>
                 </div>
+
                 <span class="offerPosition1">60%OFF</span>
             </label>
         </div>
